aws-2-tier/security_group1.tf
# Security Group for Server 1
resource "aws_security_group" "sg-1" {
  vpc_id = aws_vpc.vpc-1.id
  name   = "allows_http_ssh_server1"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-server1"
  }
}
